[ADD] Teamban and teamunban (chat = /teamban, console = rp_teamban): Ban/unban a player from a certain team. Use: /teamban <player> <team> or rp_teamban <player> <team>
[ADD] Lottery: The mayor can start a lottery and players can enter the lottery with $50. At the end one of the players wins all the money. Toggle with rp_lottery 1/0
[ADD] /advert command: Say /advert <advertisement>  to advert!
[CHANGE] All door controls are now done though reload with the Keys weapon.
[CHANGE] Descriptions in the change job VGUI(thanks james hutchins)
[CHANGE] The way prop protection works for admins
[CHANGE] Moved the job change to F2 and I added a lot of commands/entities to it
[CHANGE] The way Simple prop protection protects against slider bug: you can make the slider but you won't be able to do anything with the prop you made the slider on.
[CHANGE] Lockpick being able to hit other things than doors
[CHANGE] HasPriv() speed by using a cache: THANKS PHILXYZ
[CHANGE] SpreadFire code: THANKS PHILXYZ
[CHANGE] The way movement is done
[CHANGE] The druglab completely! I hope you like it!
[CHANGE] Put the warrant back.
[CHANGE] Scoreboard now sorts the players on their class
[CHANGE] Replaced bad rating with "friendly" rating
[CHANGE] You can see what you rated someone, and the rated guy can see who rated him.
[CHANGE] Only super admins can set peoples money(Due to complaints of admins setting random people's money)
[CHANGE] Pressing F4 when the F4 menu is already open, closes it.
[CHANGE] Lock pick appearance(I also fixed the error with ActIndex("Crowbar") isn't set)
[CHANGE] Merged Simple RP Prop protection with DarkRP
[CHANGE] Put the contents folder in DarkRP with the earthquake sound
[FIX] When use protection is on, doors couldn't be opened by some people, now they can.
[FIX] Rare error with dropweapon
[FIX] Exploit with shipments: Exploding them with more than one explosive would make them spawn more guns than usual.
[FIX] Exploit with wire nailer